plugins {
    id 'checkstyle'
    id 'distribution'
    id 'java-library'
    id 'maven-publish'
    id 'signing'
    id "com.gradleup.shadow" version "8.3.11"
    id "kr.motd.sphinx" version "2.10.1"
}

group = "com.opendxl"

apply plugin: 'base'
apply plugin: 'groovy'
apply plugin: 'maven-publish'
apply plugin: 'signing'

// Branch-specific: `jdk17` is the JDK 17 line (see README.md, "Branches"). Compilation, tests and javadoc run
// on a JDK 17 toolchain (downloaded by the foojay resolver in settings.gradle when it is not installed) and the
// bytecode/language level is Java 17 (`--release 17`). master (JDK 21) and the jdk11/jdk8 branches pin their own
// JDK here; the library API and the DXL wire format are identical on all branches.
// JDK 17 notes: the module system needs no `--add-opens` for the client or its tests (nothing reflects into
// JDK internals), and the `TlsCompatibility` security-property workaround for the RSA key exchange cipher
// suites is required on every JDK line since the 2025 JDK updates (it is not branch specific).
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 17
    // The sources are UTF-8; do not depend on the platform charset of the JDK running the build
    options.encoding = 'UTF-8'
}

dependencies {
    implementation 'commons-codec:commons-codec:1.22.1'
    implementation 'commons-io:commons-io:2.22.0'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.22'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.22.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.22.2'
    implementation 'org.apache.logging.log4j:log4j-api:2.26.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.26.1'
    implementation 'org.msgpack:msgpack-core:0.9.12'
    implementation 'info.picocli:picocli:3.8.2'
    implementation 'org.apache.commons:commons-lang3:3.20.0'
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.85'
    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
    implementation 'org.apache.httpcomponents:httpcore:4.4.16'

    // Use JUnit test framework
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.hamcrest:hamcrest-core:1.3'
    testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'
}

// Repository locations
repositories {
    mavenCentral()
}

// Jar Manifest info
jar {
    manifest {
        attributes('Main-Class': 'com.opendxl.client.cli.CommandLineInterface',
                'Implementation-Title': project.name,
                'Implementation-Version': project.version
        )
    }
}
// To Override the duplicate Strategy as it's treated as error Gradle 6.0.0 onwards
tasks.withType(Copy).all {
    duplicatesStrategy = 'include'
}
// Task for creating a jar with the source files
task sourceJar(type: Jar, dependsOn: classes) {
    // classifier deprecated from 5.3.1 gradle version
    // To Override the duplicate Strategy as it's treated as error Gradle 6.0.0 onwards
    duplicatesStrategy = 'include'
    archiveClassifier = 'sources'
    from sourceSets.main.allSource
}

// Task for creating a jar with JavaDoc
task javadocJar(type: Jar, dependsOn: javadoc) {
    // classifier deprecated from 5.3.1 gradle version
    archiveClassifier = 'javadoc'
    from javadoc.destinationDir
}

javadoc {
    exclude "**/org/eclipse/paho/**"
    options.memberLevel = JavadocMemberLevel.PUBLIC
    options.encoding = 'UTF-8'
}

artifacts {
    archives jar
    archives sourceJar
    archives javadocJar
}

// Set up the distribution zip
distributions {
    main {
        // baseName deprecated after Gradle 5.3.1
        distributionBaseName = 'dxlclient-java-sdk'
        contents {
            from(jar) {
                into('lib')
            }
            from(shadowJar) {
                into("lib")
            }
            from(configurations.compileClasspath) {
                into("lib/3rdparty")
            }
            from(sphinx) {
                into('doc')
            }
            from('sample') {
                into 'sample'
            }
            from("clientconfig/dxlclient.config.template") {
                into("sample")
                rename("dxlclient.config.template", "dxlclient.config");
            }
            from(shadowJar) {
                into("sample/lib")
            }
            from('distribution')
        }
    }
}

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
            srcDir 'paho.mqtt.java/org.eclipse.paho.client.mqttv3/src/main/java'
            srcDir 'paho.mqtt.java/org.eclipse.paho.client.mqttv3/src/main/java-templates'
            srcDir 'paho.mqtt.java/org.eclipse.paho.client.mqttv3.internal.traceformat/src/main/java'
        }
        resources {
            srcDir 'src/main/java'
            srcDir 'paho.mqtt.java/org.eclipse.paho.client.mqttv3/src/main/resources'
        }
    }
    sample {
        java {
            srcDir 'sample/src'
        }
        compileClasspath += main.output + configurations.compileClasspath
        runtimeClasspath += main.output + configurations.runtimeClasspath
    }
    test {
        resources {
            srcDir 'src/test/resources'
        }
    }
}

// Make check style run before creating a jar
jar.dependsOn(checkstyleMain)

// Force distZip to be dependent on javadocJar and sourceJar
distZip.dependsOn javadocJar
distZip.dependsOn sourceJar

tasks.withType(Checkstyle) {
    exclude "**/org/eclipse/paho/**"
}

sphinx {
    // Change the source directory.
    sourceDirectory = "${projectDir}/docs"
    // Change the output directory.
    outputDirectory = "${project.buildDir}/docs"
}

task versionFile() {
    doLast {
        new File("${projectDir}/VERSION").text = """$version"""
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = group
            pom {
                name = 'OpenDXL Java Client'
                description = 'An OpenDXL client library for Java'
                url = 'https://github.com/opendxl/opendxl-client-java'
                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }
                developers {
                    developer {
                        email = 'support@opendxl.com'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/opendxl/opendxl-client-java.git'
                    developerConnection = 'scm:git:ssh://github.com/opendxl/opendxl-client-java.git'
                    url = 'https://github.com/opendxl/opendxl-client-java'
                }
            }

            from components.java

            artifact(sourceJar) {
                classifier = 'sources'
            }
            artifact(javadocJar) {
                classifier = 'javadoc'
            }
        }
    }
    repositories {
        maven {
            url = "$buildDir/repo"

//            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
//            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots"
//            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
//            credentials {
//                username sonatypeUsername
//                password sonatypePassword
//            }
        }
    }
}

task replaceVersionInREADME() {
    if (!version.endsWith('SNAPSHOT')) {
        // Maven
        ant.replaceregexp(match: '<version>(.+)</version>', replace: "<version>${version}</version>", flags: 'g', byline: true) {
            fileset(dir: '.', includes: 'README.md')
        }
        ant.replaceregexp(match: '<version>(.+)</version>', replace: "<version>${version}</version>", flags: 'g', byline: true) {
            fileset(dir: 'docs', includes: 'prerequisites.rst')
        }
        // Gradle
        ant.replaceregexp(match: "com\\.opendxl\\:dxlclient\\:(.+)", replace: "com.opendxl:dxlclient:${version}'", flags: 'g', byline: true) {
            fileset(dir: '.', includes: 'README.md')
        }
        ant.replaceregexp(match: "com\\.opendxl\\:dxlclient\\:(.+)", replace: "com.opendxl:dxlclient:${version}'", flags: 'g', byline: true) {
            fileset(dir: 'docs', includes: 'prerequisites.rst')
        }
    }
}

signing { sign publishing.publications.maven }

// Tasks To Declare implicit_dependency necessary after Gradle 7.1
tasks.named('distTar') {
    it.mustRunAfter(tasks.named('javadoc'))
}

tasks.named('javadocJar') {
    it.mustRunAfter(tasks.named('sphinx'))
}

distZip.dependsOn javadocJar
distZip.dependsOn sourceJar
sphinx.dependsOn(versionFile)
assemble.dependsOn(replaceVersionInREADME)


test {
    systemProperty 'clientConfig', "${rootDir}/clientconfig/dxlclient.config"
    // The CLI tests compare the usage help text; keep picocli from emitting ANSI escape codes
    systemProperty 'picocli.ansi', 'false'

    // Exclude the Proxy Usage Verification Test
    exclude "**/ProxyUsageVerificationTest.class"
//    filter {
//        //specific test method
//        includeTestsMatching "com.opendxl.client.RegisterServiceTest"
//    }

//    maxHeapSize = "4096m"
//    minHeapSize = "4096m"
}

// Task for verifying proxy usage
task proxyUsageVerificationTest(type: Test) {
    systemProperty 'clientConfig', "${rootDir}/clientconfig/dxlclient.config"
    systemProperty 'picocli.ansi', 'false'
    include "**/ProxyUsageVerificationTest.class"
}
